--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
     <main>
@@ -17,11 +19,15 @@
                 <p>Seja bem-vindo novamente. Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente</p>
                 <form action="">
                     <div id="nome" class="caixa">
-                        <label for="inome">Nome: </label>
+                        <label for="inome"><span class="material-symbols-outlined">
+                            person
+                            </span> </label>
                         <input type="text" name="nome" id="inome">
                     </div>
                     <div id="senha" class="caixa">
-                        <label for="isenha">Senha: </label>
+                        <label for="isenha"><span class="material-symbols-outlined">
+                            key
+                            </span> </label>
                         <input type="text" name="senha" id="isenha">
                     </div>
                 </form>
